Fix auto refresh of notifications

--- a/src/main/resources/templates/base/notifications.html
+++ b/src/main/resources/templates/base/notifications.html
@@ -23,7 +23,7 @@
 		<td>No hay notificaciones</td>
 	</tr>
 </table>
-<form id="notification" method="post" action="showNotification">
+<form id="cleanNotification" method="post" action="showNotification">
 	<div>
 		<button class="btn btn-success" type="submit">Ver mis
 			notificaciones</button>
