--- a/src/main/resources/templates/orderReview.html
+++ b/src/main/resources/templates/orderReview.html
@@ -13,17 +13,17 @@
 					<thead>
 						<tr>
 							<th>Order ID</th>
-							<th>Opinion</th>
 							<th></th>
 						</tr>
 					</thead>
 					<tr th:each="order: ${ordersToReview}">
-						<form action="reviewExperience" method="post">
-						<td><input type="hidden" name="orderId" th:text="${order.orderId}"
-							th:value="${order.orderId}" /></td>
-						<td><input type="text" required="required"
-							name="review" min="1" max="50" placeholder="opinion" /></td>
-						<td><button class="btn btn-success" type="submit">Confirmar</button></td>
+						<form action="showOrderToReview" method="post">
+						<td><input type="hidden" name="orderId" th:text="${order.id}"
+							th:value="${order.id}" /></td>
+						<!--<td><input type="text" required="required"
+							name="review" min="1" max="50" placeholder="opinion" /></td>-->
+						<td th:if="${order.review == ''}"><button class="btn btn-success" name="newOpinion" type="submit">Dejar opinion</button></td>
+						<td th:if="not ${order.review == ''}"><button class="btn btn-success" name="modifyOpinion" type="submit">Modificar opinion</button></td>
 						</form>
 					</tr>
 				</table>
