Improves html user views

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -79,8 +79,20 @@ h1 {
 	border-radius: 10px;
 	background: white;
 	border: black 2px solid;
-	padding: 7%;
-	margin-top: 7%;
+	padding: 4%;
+	margin-top: 2%;
+	height: 20px;
+	width: 20px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-family: lobster;
+	color: #000000;
+	font-size: 150%;
+}
+
+.alertHelp {
+	margin-top: 4%;
 }
 
 .mainNotifications {
@@ -91,7 +103,7 @@ h1 {
 }
 
 .intro {
-	margin-top: 5%;
+	margin-top: 2%;
 	font-size: 3em;
 }
 
