--- a/src/main/resources/templates/base/navbar.html
+++ b/src/main/resources/templates/base/navbar.html
@@ -1,6 +1,6 @@
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-	<a class="navbar-brand" href="/">EatApp</a>
+	<a class="navbar-brand title" href="/"><b>EatApp</b></a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse"
 		data-target="#navbarsExampleDefault"
 		aria-controls="navbarsExampleDefault" aria-expanded="false"
@@ -10,12 +10,18 @@
 
 	<div class="collapse navbar-collapse" id="navbarsExampleDefault">
 		<th:block th:switch="${session.type}">
-			<div th:case="'COMMENSAL'" th:insert="base/navbarCommensal.html"></div>
+			<div th:case="'COMMENSAL'">
+				<div th:if="${session.table}" th:insert="base/navbarCommensalWithCode.html"></div>
+				<div th:unless="${session.table}" th:insert="base/navbarCommensalWithoutCode.html"></div>
+			</div>
+			<div th:case="'COOK'" th:insert="base/navbarCook.html"></div>
+			<div th:case="'WAITER'" th:insert="base/navbarWaiter.html"></div>
+			<div th:case="'ADMIN'" th:insert="base/navbarAdmin.html"></div>
 		</th:block>
 		<ul th:if="${session.email}" class="navbar-nav ml-auto">
-			<li class="nav-item"><a
+			<li class="nav-item active"><a
 				th:text="${session.email} + ' Cerrar sesión'" class="nav-link"
-				href="/logout"><span class="sr-only">(current)</span></a> <!-- TODO modify current with javascript --></li>
+				href="/logout"><span class="sr-only">(current)</span></a></li>
 		</ul>
 	</div>
 </nav>
