Fixes admin views

--- a/src/main/resources/templates/registerEmployeeForm.html
+++ b/src/main/resources/templates/registerEmployeeForm.html
@@ -1,8 +1,5 @@
-<!DOCTYPE html>
-<html>
+<html lang="es">
 <head th:insert="base/head">
-<meta charset="ISO-8859-1">
-<title>Register New Employee</title>
 </head>
 <body>
 	<div th:insert="base/navbar.html"></div>
@@ -10,7 +7,7 @@
 		<main role="main" class="main container col-xl col-lg col-md col-sm">
 			<div class="starter-template">
 				<div>
-					<h1>Registrar nuevo empleado</h1>
+					<h2 class="intro">Registrar nuevo empleado</h2>
 					<div class="loginForm box" th:insert="loginForm.html"></div>
 				</div>
 			</div>
