--- a/src/main/resources/templates/mainAdminView.html
+++ b/src/main/resources/templates/mainAdminView.html
@@ -1,15 +1,18 @@
 <h2 class="intro">¿Qué puedes hacer en EatApp?</h2>
-<div class="row col-xl-11 offset-xl-1 col-lg-11 offset-lg-1">
-	<div
-		class="column mainOptions col-xl-5 col-lg-5 col-sm-12 float-md-center">
-		<a href="/registerEmployee">Registrar un trabajador</a>
-	</div>
-	<div
-		class="column mainOptions col-xl-5 col-lg-5 col-sm-12 float-md-center">
-		<a href="/removeEmployee">Eliminar un trabajador</a>
-	</div>
-	<div
-		class="column mainOptions col-xl-5 col-lg-5 offset-lg-1 col-sm-12 ">
-		<a href="/logout">Cerrar sesión</a>
-	</div>
+<div class="row">
+	<a href="/registerEmployee"
+		class="btn column mainOptions col-xl-12 col-lg-12 col-sm-12 col-xs-12"
+		role="button">
+		<p>Registrar un trabajador</p>
+	</a>
+	<a href="/removeEmployee"
+		class="btn column mainOptions col-xl-12 col-lg-12 col-sm-12 col-xs-12"
+		role="button">
+		<p>Eliminar un trabajador</p>
+	</a>
+	<a href="/logout"
+		class="btn column mainOptions col-xl-12 col-lg-12 col-sm-12 col-xs-12"
+		role="button">
+		<p>Cerrar sesión</p>
+	</a>
 </div>
