--- a/src/main/resources/templates/mainUserView.html
+++ b/src/main/resources/templates/mainUserView.html
@@ -14,6 +14,7 @@
 					<div th:case="'COOK'" th:insert="mainCookView.html"></div>
 					<div th:case="'WAITER'" th:insert="mainWaiterView.html"></div>
 				</th:block>
+				<img class="images" src="images/logo.png" alt="EatApp logo">
 			</div>
 		</main>
 	</div>
