--- a/src/main/resources/templates/mainAdminView.html
+++ b/src/main/resources/templates/mainAdminView.html
@@ -1,17 +1,17 @@
 <h2 class="intro">¿Qué puedes hacer en EatApp?</h2>
 <div class="row">
 	<a href="/registerEmployee"
-		class="btn column mainOptions col-xl-12 col-lg-12 col-sm-12 col-xs-12"
+		class="btn column mainOptions col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12"
 		role="button">
 		<p>Registrar un trabajador</p>
 	</a>
 	<a href="/removeEmployee"
-		class="btn column mainOptions col-xl-12 col-lg-12 col-sm-12 col-xs-12"
+		class="btn column mainOptions col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12"
 		role="button">
 		<p>Eliminar un trabajador</p>
 	</a>
 	<a href="/logout"
-		class="btn column mainOptions col-xl-12 col-lg-12 col-sm-12 col-xs-12"
+		class="btn column mainOptions col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12"
 		role="button">
 		<p>Cerrar sesión</p>
 	</a>
