--- a/src/main/resources/templates/mainCommensalViewWithoutCode.html
+++ b/src/main/resources/templates/mainCommensalViewWithoutCode.html
@@ -1,18 +1,18 @@
 <div class="row">
 	<a href="/managePaymentMethods"
-		class="btn column mainOptions col-xl-12 col-lg-12 col-sm-12 col-xs-12"
+		class="btn column mainOptions col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12"
 		role="button">
 		<p>Gestionar métodos de pago</p>
 	</a>
 	<a href="/registerInTable"
-		class="btn column mainOptions col-xl-12 col-lg-12 col-sm-12 col-xs-12"
+		class="btn column mainOptions col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12"
 		role="button">
 		<p>Registrarse en una mesa</p>
 	</a>
 	<a href="/reviewExperience"
-		class="btn column mainOptions col-xl-12 col-lg-12 col-sm-12 col-xs-12"
+		class="btn column mainOptions col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12"
 		role="button"><p>Dejar una opinión</p> </a> <a href="/logout"
-		class="btn column mainOptions col-xl-12 col-lg-12 col-sm-12 col-xs-12"
+		class="btn column mainOptions col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12"
 		role="button">
 		<p>Cerrar sesión</p>
 	</a>
