--- a/src/main/resources/templates/removeEmployeeForm.html
+++ b/src/main/resources/templates/removeEmployeeForm.html
@@ -4,7 +4,7 @@
 <body>
 	<div th:insert="base/navbar.html"></div>
 	<div class="page">
-		<main role="main" class="main container col-xl col-lg col-md col-sm">
+		<main role="main" class="main container col-xl col-lg col-md col-sm col-">
 			<div class="starter-template">
 				<div>
 					<h2 class="intro">Eliminar empleado</h2>
