--- a/src/main/resources/templates/showIngredientsAmountView.html
+++ b/src/main/resources/templates/showIngredientsAmountView.html
@@ -7,7 +7,7 @@
 <body>
 	<div th:insert="base/navbar.html"></div>
 	<div class="page">
-		<main role="main" class="main container col-xl col-lg col-md col-sm">
+		<main role="main" class="main container col-xl col-lg col-md col-sm col-">
 			<div class="starter-template">
 				<div th:if="${not #lists.isEmpty(ingredients)}">
 					<h2 class="intro">Estos son los ingredientes que hay que comprar!</h2>
