--- a/src/main/resources/templates/createNewOrder.html
+++ b/src/main/resources/templates/createNewOrder.html
@@ -7,7 +7,7 @@
 <body>
 	<div th:insert="base/navbar.html"></div>
 	<div class="page">
-		<main role="main" class="main container col-xl col-lg col-md col-sm">
+		<main role="main" class="main container col-xl col-lg col-md col-sm col-">
 			<div class="starter-template">
 					<h2 th:unless="${session.orderInProgress}" class="intro">¿Qué te apetece?</h2>
 					<h2 th:if="${session.orderInProgress}" class="intro">Así dejaste tu pedido</h2>
