--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -9,7 +9,7 @@
 <body>
 	<div th:insert="base/navbar.html"></div>
 	<div class="page">
-		<main role="main" class="main container col-xl col-lg col-md col-sm">
+		<main role="main" class="main container col-xl col-lg col-md col-sm col-">
 			<div class="starter-template">
 				<div th:if="${error}" class="alert alert-danger" role="alert">
 					<p th:text="${error}"></p>
