--- a/src/main/resources/templates/mainCookView.html
+++ b/src/main/resources/templates/mainCookView.html
@@ -1,42 +1,42 @@
 <h2 class="intro">¿Qué puedes hacer en EatApp?</h2>
 <div class="row">
-	<div class="mainNotifications column offset-xl-3 offset-lg-3 col-xl-6 col-lg-6 col-sm-12"
+	<div class="mainNotifications column offset-xl-3 offset-lg-3 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12"
 		th:insert="base/notifications.html">
 	</div>
 </div>
 <div class="row">
 	<a href="#"
-		class="btn column mainOptions col-xl-4 col-lg-4 col-sm-12 col-xs-12"
+		class="btn column mainOptions col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12"
 		role="button">
 		<p>Gestionar estado de producto</p>
 	</a>
 	<a href="#"
-		class="btn column mainOptions col-xl-4 col-lg-4 col-sm-12 col-xs-12"
+		class="btn column mainOptions col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12"
 		role="button">
 		<p>Cancelar producto</p>
 	</a>
 	<a href="#"
-		class="btn column mainOptions col-xl-4 col-lg-4 col-sm-12 col-xs-12"
+		class="btn column mainOptions col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12"
 		role="button">
 		<p>Gestionar menú</p>
 	</a>
 	<a href="#"
-		class="btn column mainOptions col-xl-4 col-lg-4 col-sm-12 col-xs-12"
+		class="btn column mainOptions col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12"
 		role="button">
 		<p>Gestionar status de ingredientes</p>
 	</a>
 	<a href="/manageQuantityOfIngredient"
-		class="btn column mainOptions col-xl-4 col-lg-4 col-sm-12 col-xs-12"
+		class="btn column mainOptions col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12"
 		role="button">
 		<p>Configurar cantidad minima de un ingrediente</p>
 	</a>
 	<a href="/showIngredientsAmount"
-		class="btn column mainOptions col-xl-4 col-lg-4 col-sm-12 col-xs-12"
+		class="btn column mainOptions col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12"
 		role="button">
 		<p>Ver cantidades de los ingredientes</p>
 	</a>
 	<a href="/logout"
-		class="btn column mainOptions col-xl-12 col-lg-12 col-sm-12 col-xs-12"
+		class="btn column mainOptions col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12"
 		role="button">
 		<p>Cerrar sesión</p>
 	</a>
