--- a/src/main/resources/templates/manageIngredient.html
+++ b/src/main/resources/templates/manageIngredient.html
@@ -5,7 +5,7 @@
 <body>
 	<div th:insert="base/navbar.html"></div>
 	<div class="page">
-		<main role="main" class="main container col-xl col-lg col-md col-sm">
+		<main role="main" class="main container col-xl col-lg col-md col-sm col-">
 			<div class="starter-template">
 				<h2 class="intro">Configurar cantidad de ingredientes</h2>
 				<table th:if="${ingredients}" id="dataTable"
