--- a/src/main/resources/templates/orderReview.html
+++ b/src/main/resources/templates/orderReview.html
@@ -5,7 +5,7 @@
 <body>
 	<div th:insert="base/navbar.html"></div>
 	<div class="page">
-		<main role="main" class="main container col-xl col-lg col-md col-sm">
+		<main role="main" class="main container col-xl col-lg col-md col-sm col-">
 			<div class="starter-template">
 				<h2 class="intro">Por favor, deja tu opinion</h2>
 				<table th:if="ordersToReview" id="dataTable"
