--- a/src/main/resources/templates/showOrder.html
+++ b/src/main/resources/templates/showOrder.html
@@ -7,7 +7,7 @@
 <body>
 	<div th:insert="base/navbar.html"></div>
 	<div class="page">
-		<main role="main" class="main container col-xl col-lg col-md col-sm">
+		<main role="main" class="main container col-xl col-lg col-md col-sm col-">
 			<div class="starter-template">
 				<div th:if="${session.order}">
 					<h2 class="intro">Este es tu pedido:</h2>
