Starts Manage Product Status UC

--- a/src/main/resources/templates/mainWaiterView.html
+++ b/src/main/resources/templates/mainWaiterView.html
@@ -5,7 +5,7 @@
 	</div>
 </div>
 <div class="row">
-	<a href="#"
+	<a href="/manageProductStatus"
 		class="btn column mainOptions col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12"
 		role="button">
 		<p>Gestionar status de producto</p>
