--- a/src/main/resources/templates/base/navbarCook.html
+++ b/src/main/resources/templates/base/navbarCook.html
@@ -1,5 +1,5 @@
 <ul class="navbar-nav mr-auto">
-	<li class="nav-item active"><a class="nav-link" href="#">Gestionar producto</a></li>
+	<li class="nav-item active"><a class="nav-link" href="/manageProductStatus">Gestionar producto</a></li>
 	<li class="nav-item active"><a class="nav-link" href="/registerInTable">Gestionar menú</a></li>
 	<li class="nav-item active"><a class="nav-link" href="#">Gestionar ingredientes</a></li>
 	<li class="nav-item active"><a class="nav-link" href="/manageQuantityOfIngredient">Ver cantidad mínima de ingredientes</a></li>
