--- a/src/main/resources/templates/base/navbarWaiter.html
+++ b/src/main/resources/templates/base/navbarWaiter.html
@@ -1,4 +1,4 @@
 <ul class="navbar-nav mr-auto">
-	<li class="nav-item active"><a class="nav-link" href="#">Gestionar producto</a></li>
+	<li class="nav-item active"><a class="nav-link" href="/manageProductStatus">Gestionar producto</a></li>
 	<li class="nav-item active"><a class="nav-link" href="#">Cancelar pedido</a></li>
 </ul>
