--- a/src/main/resources/templates/mainCommensalViewWithoutCode.html
+++ b/src/main/resources/templates/mainCommensalViewWithoutCode.html
@@ -11,7 +11,10 @@
 	</a>
 	<a href="/reviewExperience"
 		class="btn column mainOptions col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12"
-		role="button"><p>Dejar una opinión</p> </a> <a href="/logout"
+		role="button">
+		<p>Dejar una opinión</p>
+	</a>
+	<a href="/logout"
 		class="btn column mainOptions col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12"
 		role="button">
 		<p>Cerrar sesión</p>
