--- a/src/main/resources/templates/manageProductStatusOrders.html
+++ b/src/main/resources/templates/manageProductStatusOrders.html
@@ -8,33 +8,46 @@
 			class="main container col-xl col-lg col-md col-sm col-">
 			<div class="starter-template">
 				<h2 class="intro">Estas son los pedidos que están en proceso:</h2>
-				<table id="dataTable" class="table table-striped display">
+				<table th:if="${orders}" id="dataTable"
+					class="table table-striped display">
 					<thead>
 						<tr>
-							<th>Producto</th>
-							<th>Cantidad</th>
-							<th>userId</th>
+							<th>Order</th>
+							<th>Mesa</th>
+							<th>Productos</th>
 							<th>Estado</th>
-							<th>Acciones</th>
 						</tr>
 					</thead>
-					<span th:each="order: ${orders}">
-					<tr th:each="product: ${order.products}">
-						<td th:text="${product.key.name}" /></td>
-						<td th:text="${product.value}"></td>
-						<td th:text="${order.userId}"></td>
-						<td th:text="${order.state.state}"></td>
+					<tr th:each="order: ${orders}">
+						<td th:text="${order.id}" /></td>
+						<td>Mesa</td>
 						<td>
-						<span>
-							<form>
-								<button formaction="#" type="submit" class="btn btn-success">Siguiente
-									estado</button>
-								<button formaction="#" type="submit" class="btn btn-danger">Cancelar producto</button>
-							</form>
-							</span>
+							<table id="dataTable" class="table table-striped display">
+								<thead>
+									<tr>
+										<th>Producto</th>
+										<th>Cantidad</th>
+										<th>Estado</th>
+										<th>Acciones</th>
+									</tr>
+								</thead>
+								<tr th:each="product: ${order.products}">
+									<td th:text="${product.key.name}"></td>
+									<td th:text="${product.value}"></td>
+									<td th:text="${product.key.state.state}"></td>
+									<td>
+										<form>
+											<button formaction="#" type="submit" class="btn btn-success">Siguiente
+												estado</button>
+											<button formaction="#" type="submit" class="btn btn-danger">Cancelar
+												producto</button>
+										</form>
+									</td>
+								</tr>
+							</table>
 						</td>
+						<td th:text="${order.state.state}"></td>
 					</tr>
-					</span>
 				</table>
 			</div>
 		</main>
