Initializes product state when creating and show order and displays it

--- a/src/main/resources/templates/showOrder.html
+++ b/src/main/resources/templates/showOrder.html
@@ -26,8 +26,7 @@
 							<td th:text="${product.key.description}"></td>
 							<td th:text="${product.key.Price}"></td>
 							<td th:text="${product.value}"></td>
-							<td>WIP</td>
-							<!-- TODO Product Status -->
+							<td th:text="${product.key.state.state}"></td>
 						</tr>
 						<tr>
 							<td />Total
