--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -15,16 +15,16 @@ h1, h2 {
 	overflow: auto;
 }
 
-.nav-item > a {
-    border-right: 1px solid #000000;
+.nav-item>a {
+	border-right: 1px solid #000000;
 }
 
-.nav-item > li:last-child > a {
-    border-right: 0;
+.nav-item>li:last-child>a {
+	border-right: 0;
 }
 
 .navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: black;
+	background-color: black;
 }
 
 .jumbotron {
@@ -103,6 +103,11 @@ h1 {
 	font-size: 1.5rem;
 }
 
+.mainOptions:hover {
+	background-color: #E8E8E8;
+	color: white;
+}
+
 .alertHelp {
 	margin-top: 4%;
 }
@@ -148,7 +153,7 @@ table {
 	margin-bottom: 20px;
 }
 
-.images{
+.images {
 	margin-top: 2%;
 	width: 10%;
 }
