Changes and tests in manageProductStatus UC

--- a/src/main/resources/templates/manageProductStatusOrders.html
+++ b/src/main/resources/templates/manageProductStatusOrders.html
@@ -60,7 +60,7 @@
 												<input type="hidden" name="userId"
 													th:value="${order.userId}" /> <input type="hidden"
 													name="productId" th:value="${product.key.id}" /> <input
-													type="hidden" name="operation" value="cancel" />
+													type="hidden" name="operation" value="cancel" /> <!--  TODO In other controller to cancel product -->
 											</form>
 									</span>
 									</td>
