Includes Register new user UC
Refactors register employee and register new user.

--- a/src/main/resources/templates/base/navbarAdmin.html
+++ b/src/main/resources/templates/base/navbarAdmin.html
@@ -1,4 +1,4 @@
 <ul class="navbar-nav mr-auto">
-	<li class="nav-item active"><a class="nav-link" href="/registerEmployee">Registrar un trabajador</a></li>
+	<li class="nav-item active"><a class="nav-link" href="/register">Registrar un trabajador</a></li>
 	<li class="nav-item active"><a class="nav-link" href="/removeEmployee">Eliminar un trabajador</a></li>
 </ul>
