--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
 				</div>
 				<div th:unless="${session.email}" class="loginForm box" th:insert="loginForm.html"></div>
 				<p>¿No estás registrado?</p>
-				<a href="#" class="btn btn-info" role="button">Registrar</a>
+				<a href="/register" class="btn btn-info" role="button">Registrarse</a>
 				<!-- TODO <p>Forgot your password? <u style="color:#f1c40f;">Click Here!</u></p>-->
 			</div>
 		</main>
