--- a/src/main/resources/templates/mainAdminView.html
+++ b/src/main/resources/templates/mainAdminView.html
@@ -1,6 +1,6 @@
 <h2 class="intro">¿Qué puedes hacer en EatApp?</h2>
 <div class="row">
-	<a href="/registerEmployee"
+	<a href="/register"
 		class="btn column mainOptions col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12"
 		role="button">
 		<p>Registrar un trabajador</p>
