--- a/src/main/resources/templates/registerForm.html
+++ b/src/main/resources/templates/registerForm.html
@@ -7,7 +7,9 @@
 		<main role="main" class="main container col-xl col-lg col-md col-sm col-">
 			<div class="starter-template">
 				<div>
-					<h2 class="intro">Registrar nuevo empleado</h2>
+					<h2 class="intro">
+						<span th:text="${title}"></span>
+					</h2>
 					<div class="loginForm box" th:insert="loginForm.html"></div>
 				</div>
 			</div>
