Includes start of ManageMenu

--- a/src/main/resources/templates/mainCookView.html
+++ b/src/main/resources/templates/mainCookView.html
@@ -15,10 +15,10 @@
 		role="button">
 		<p>Cancelar producto</p>
 	</a>
-	<a href="#"
+	<a href="/manageMenu"
 		class="btn column mainOptions col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12"
 		role="button">
-		<p>Gestionar menú</p>
+		<p>Gestionar menu</p>
 	</a>
 	<a href="#"
 		class="btn column mainOptions col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12"
