Manage Menu UC complete. DB updated

--- a/src/main/resources/templates/changeProductIngredients.html
+++ b/src/main/resources/templates/changeProductIngredients.html
@@ -47,7 +47,7 @@
 							<td />
 							<td />
 							<td>
-								<button type="submit" class="btn btn-success"
+								<button type="submit" class="btn btn-success" name="productId"
 									th:value="${productId}" formaction="newProductIngredients">Confirmar</button>
 							</td>
 						</tr>
